# itmo_mlops_course

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  DockerFile  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/processed/medium/: test_df.csv  train_df.csv  val_df.csv
data/processed/rigid/: test_df.csv  train_df.csv  val_df.csv
data/processed/soft/: test_df.csv  train_df.csv  val_df.csv
data/raw/: lenta_ru_10k_sample.csv
docs/: index.md
models/: best_model_medium.joblib  best_model_rigid.joblib  best_model_soft.joblib
models/medium/: best_model_medium.joblib
models/rigid/: best_model_rigid.joblib
models/soft/: best_model_soft.joblib
reports/: clearml_report_20250608.txt
results/: dataset_medium_logreg_report.txt  dataset_medium_svm_report.txt  dataset_rigid_logreg_report.txt  dataset_rigid_svm_report.txt  dataset_soft_logreg_report.txt  dataset_soft_svm_report.txt  run_report.txt  summary.csv
search/: search_index.json
src/mlops_course_project/: Snakefile  convert_skl2onnx.py  evaluate_models.py  generate_report_from_clearml.py  main.py  medium_processing_approach.py  processing.py  rigid_processing_approach.py  soft_processing_approach.py  train_model.py  train_models.py
src/mlops_course_project/conf/: config.yaml
src/mlops_course_project/conf/evaluate/: default.yaml
src/mlops_course_project/conf/generate_report/: default.yaml
src/mlops_course_project/conf/processing/: medium.yaml  rigid.yaml  soft.yaml
src/mlops_course_project/conf/training/: default.yaml
triton_server/: docker-compose.yml
triton_server/.conda/: conda-pack.yml
triton_server/.docker/: Dockerfile
triton_server/client/: bls.py  perf_analyze_medium_result.csv  perf_analyze_rigid_result.csv  perf_analyze_soft_result.csv  performance_report.md  test_data.json  test_perfomance.py  utils.py
triton_server/metrics/: prometheus.yml
triton_server/metrics/grafana/dashboards/: medium-pipeline-dashboard.json  rigid-pipeline-dashboard.json  soft-pipeline-dashboard.json
triton_server/metrics/grafana/provisioning/dashboards/: dashboards.yml
triton_server/metrics/grafana/provisioning/datasources/: datasource.yml
triton_server/models/model_soft_bls/: config.pbtxt
triton_server/models/model_soft_bls/1/: model.py  processing_config.json
triton_server/models/topic_classification_bls/: config.pbtxt
triton_server/models/topic_classification_bls/1/: config.json  model.py  processing_config_medium.json  processing_config_rigid.json  processing_config_soft.json
